samples/_failures_safe/1761324128_fd7f63_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4133ea66.c: In function ‘tokenize’:
./samples/SAFE/__tmp_4133ea66.c:162: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_4133ea66.c:161:9: error: expected declaration or statement at end of input
  161 |         if
      |         ^~
./samples/SAFE/__tmp_4133ea66.c:161:9: error: expected declaration or statement at end of input
